[package]
name = "csv-zip-maker"
version = "0.2.3"
authors = ["aoyagikouhei <aoyagi.kouhei@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "csv and zip maker"
repository = "https://github.com/aoyagikouhei/csv-zip-maker-rs"
keywords = ["csv", "zip"]
categories = ["filesystem"]
readme = "Readme.md"
documentation = "https://docs.rs/csz-zip-maker"

[dependencies]
csv = "1.3"
tempfile = "3.10"
thiserror = "1"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
